syntax = "proto3";

package subscription;

service SubscriptionService {
  rpc create (Subscription) returns (Subscription) {}
  rpc getOne (ById) returns (Subscription) {}
  rpc getAll (Empty) returns (SubscriptionList) {}
  rpc update (Subscription) returns (Subscription) {}
  rpc delete (ById) returns (SubscriptionCount) {}
}

message Subscription {
  int32 id = 1;
  string email = 2;
  string firstname = 3;
  string gender = 4;
  string dateOfBirth = 5;
  bool consent = 6;
  int32 newsletterId = 7;
}

message ById {
  int32 id = 1;
}

message SubscriptionList {
  repeated Subscription item = 1;
}

message SubscriptionCount {
  int32 count = 1;
}

message Empty {

}